# pid_parser

./: .cursorrules  .gitignore  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt
docs/: README.md
docs/api/: README.md
docs/architecture/: README.md
docs/technical_design/: README.md
notebooks/: README.md  config.json  config.py  evaluate_extraction_notebook.py  extract_metadata_notebook.py
src/pid_parser/: __init__.py  api_utils.py  delta_utils.py  evaluation.py  image_utils.py  mlflow_utils.py  ocr_pipeline.py  prompts.py
tests/: README.md  __init__.py
